--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -1,19 +1,20 @@
 헤더파일(header file)
 ===
+### 헤더파일
 * 표준 함수의 원형 및 표준 함수와 관련된 다양한 정보를 가지고 있는 파일을 표준 헤더 파일이라고 한다. 또한, 사용자는 자신만의 사용자 헤더 파일을 자유롭게 만들 수도 있다.
 * 헤더 파일의 확장자는 보통 .h를 사용하며, #include 선행처리 지시자를 사용하여 다른 파일에 포함시킬 수 있다.
 
-### 표준 헤더 파일
+#### 1. 표준 헤더 파일
 표준 헤더 파일은 그 크기가 상당하지만 크기가 큰 헤더 파일을 포함한다고 프로그램의 크기가 반드시 커지는 것은 아니다.
 헤더 파일의 내용은 실행 파일에 추가되는 내용보다는 컴파일러가 실행 파일을 만드는 데 사용하는 정보가 대부분이다.
 
-##### 표준 헤더 파일에 저장되는 정보
+##### 1-1. 표준 헤더 파일에 저장되는 정보
 1. 표준 함수의 원형
 2. 표준 함수의 매크로 상수
 3. 표준 함수의 사용자 정의 타입(구조체, 공용체) 정의
 4. 매크로 함수의 정의
 
-##### 조건부 컴파일을 활용한 헤더파일 중복삽입 문제의 해결
+##### 1-2. 조건부 컴파일을 활용한 헤더파일 중복삽입 문제의 해결
 [선행처리와 매크로 - #ifndef, #endif](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%84%A0%ED%96%89%EC%B2%98%EB%A6%AC%EC%99%80_%EB%A7%A4%ED%81%AC%EB%A1%9C.md#2ifdef-ifndef)
 
 ```cpp
@@ -31,7 +32,7 @@ typedef struct div  //나눗셈에 대한 구조체
 
 
 
-#### 1.time.h
+#### 2. time.h
 * 해당 헤더파일에 선언되어 있는 time이라는 이름의 함수을 제공해준다.
 * time : 컴퓨터의 현재시간과 1970년 1월 1일 이후의 시간적 차를 초단위로 계산해서 반환해준다.
 
@@ -41,7 +42,7 @@ srand((int)time(NULL));	//현재시간을 이용해서 씨드를 설정
 rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 상수
 ```
 
-#### 2.math.h
+#### 3. math.h
 * 해당 헤더파일에는 수학관련된 함수들을 제공해준다.
 
 |함수 원형|기능|
@@ -55,7 +56,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double log10(double x);|log(10)x값 반환|
 |double sqrt(double x);|(sqrt)x값 반환|
 
-##### 사인(sine), 코사인(cosine), 탄젠트(tangent) 관련 함수들
+##### 3-1. 사인(sine), 코사인(cosine), 탄젠트(tangent) 관련 함수들
 * 아래 함수들도 math.h에 선언되어 있으며, 각도는 라디안(radian)을 기준으로 계산이 된다.
 
 |함수 원형|기 능|
@@ -73,7 +74,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double asinh (double x);|x의 쌍곡선 아크사인 값 반환|
 |double atanh (double x);|x의 쌍곡선 아크탄젠트 값 반환|
 
-#### 3.stdlib.h
+#### 4. stdlib.h
 * ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
 * int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
 * RAND_MAX : 생성될 수 있는 난수의 최대값(stdlib.h에 선언되어 있는 상수). 즉 rand함수는 0이상 RAND_MAX 이하의 값을 반환한다.
