--- a/C/learn/함수.md
+++ b/C/learn/함수.md
@@ -59,13 +59,19 @@ void HowToUseThisProg(void)
 #### 매개변수
 - 선언된 함수내에서만 접근이 가능하다.
 - 선언된 함수가 반환을 하면 지역변수와 마찬가지로 소멸.
+- 매개변수 선언인 ...은 인자의 자료형과 수에 제한이 없음을 의미한다.
 
 ```cpp
 int localFunction(int ta)
 {
 	int i = 123;
-	return ta + i;	//ta는 지역변수, i는 매개변수
+	return ta + i;	//ta는 매개변수, i는 지역변수
 };
+int Sum(int n, ...)	//...은 가변인자에 대한 선언
+{
+	printf("n=%d \n",n);
+	return 0;
+}
 ```
 #### 전역변수
 - 프로그램의 시작과 동시에 메모리 공간에 할당되어 종료 시까지 존재.
