--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -15,7 +15,7 @@
 4. 매크로 함수의 정의
 
 ##### 1-2. 조건부 컴파일을 활용한 헤더파일 중복삽입 문제의 해결
-[선행처리와 매크로 - #ifndef, #endif](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%84%A0%ED%96%89%EC%B2%98%EB%A6%AC%EC%99%80_%EB%A7%A4%ED%81%AC%EB%A1%9C.md#2ifdef-ifndef)
+* [선행처리와 매크로 - #ifndef, #endif](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%84%A0%ED%96%89%EC%B2%98%EB%A6%AC%EC%99%80_%EB%A7%A4%ED%81%AC%EB%A1%9C.md#2ifdef-ifndef)
 
 ```cpp
 #ifndef __TEST1_H__  //매크로 TEST1이 존재하지 있지않으면 삽입, 존재하면 통과
@@ -86,7 +86,15 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |int abs(int x);|x의 절대값 반환|
 |int labs(long x);|x의 절대값 반환|
 
+#### 5. stdarg.h 
+* [가변인자에 대한 매개변수의 선언방법](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%ED%95%A8%EC%88%98.md#%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98)
 
+|함수 원형|기능|
+|-|-|
+|va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
+|va_start(x, n)|참조자가 가변인자를 참조하기 위해 선언(x는 변수, n은 참조할 인자의 개수 정보)|
+|va_arg(x,void*)|가변인자에 대한 값을 추출(x는 변수, void*는 차조 대상의 자료형)|
+|va_end(x)|참조자가 가변인자를 참조하지 않도록 해제(x는 변수)|
 
 
 
