--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -92,7 +92,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |함수 원형|기능|
 |-|-|
 |va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
-|va_start(x, n)|참조자가 가변인자를 참조하기 위해 선언(x는 변수, n은 참조할 인자의 개수 정보)|
+|va_start(x, n)|참조자가 가변인자를 참조(x는 변수, n은 참조할 인자의 개수 정보)|
 |va_arg(x,void*)|가변인자에 대한 값을 추출(x는 변수, void*는 차조 대상의 자료형)|
 |va_end(x)|참조자가 가변인자를 참조하지 않도록 해제(x는 변수)|
 
