--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -8,15 +8,12 @@
 
 
 #### 알고리즘
-표현 및 저장된 데이터를 대상으로 하는 '문제의 해결 방법'을 뜻한다.
-
-
-
-
-##### 시간 복잡도(Time Complexity)와 공간 복잡도(Space Complexity)
-알고리즘을 평가하는 두 가지 요소로 '시간 복잡도'는 속도에 해당하는 알고리즘의 수행시간 분석결과를, '공간 복잡도'는 메모리 사용량에 대한 분석결과를 가리켜 말한다.
-알고리즘의 수행속도를 평가할 때는 '처리해야 할 데이터의 수n에 대한 연산횟수의 함수 T(n)'으로 평가한다.
-
+* 표현 및 저장된 데이터를 대상으로 하는 '문제의 해결 방법'을 뜻한다.
+* 알고리즘을 평가하는 두 가지 요소로 **'시간 복잡도(Time Complexity)'는 속도에 해당하는 알고리즘의 수행시간 분석결과**를, **'공간 복잡도(Space Complexity)'는 메모리 사용량에 대한 분석결과**를 가리켜 말한다.
+* 알고리즘의 수행속도를 평가할 때는 **'처리해야 할 데이터의 수n에 대한 연산횟수의 함수 T(n)'** 으로 평가한다.
+* 모든 알고리즘에는 **'최선의 경우(best case)'** 와 **'최악의 경우(worst case)'**, **'평균적인 경우(average case)'** 가 각각 존재한다.
+* '최선의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우를, '최악의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우를 말한다.
+* '평균적인 경우'는 시간 복잡도를 평가하는 정보로 의미를 지닌다.
 
 
 
