--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -13,7 +13,7 @@
 * 알고리즘의 수행속도를 평가할 때는 **'처리해야 할 데이터의 수n에 대한 연산횟수의 함수 T(n)'** 으로 평가한다.
 * 모든 알고리즘에는 **'최선의 경우(best case)'** 와 **'최악의 경우(worst case)'**, **'평균적인 경우(average case)'** 가 각각 존재한다.
 * '최선의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우를, '최악의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우를 말한다.
-* '평균적인 경우'는 시간 복잡도를 평가하는 정보로 의미를 지니지만 '최악의 경우'로 시간 복잡도를 평가하는 것이 알고리즘의 안전성과 예측 가능하므로 '최악의 경우'를 주로 사용한다.
+* **'평균적인 경우'** 는 시간 복잡도를 평가하는 정보로 의미를 지니지만 **'최악의 경우'로 시간 복잡도를 평가하는 것이 알고리즘의 안전성과 예측 가능하므로** '최악의 경우'를 주로 사용한다.
 
 
 
