--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -1,13 +1,13 @@
 ### 자료구조와 알고리즘
 
-#### 자료구조
+#### 1. 자료구조
 데이터를 표현하고 저장하는 방법에 대해서 알려준다.
 
-##### 자료구조의 분류
+##### 1-1. 자료구조의 분류
 
 
 
-#### 알고리즘
+#### 2. 알고리즘
 * 표현 및 저장된 데이터를 대상으로 하는 '문제의 해결 방법'을 뜻한다.
 * 알고리즘을 평가하는 두 가지 요소로 **'시간 복잡도(Time Complexity)'는 속도에 해당하는 알고리즘의 수행시간 분석결과**를, **'공간 복잡도(Space Complexity)'는 메모리 사용량에 대한 분석결과**를 가리켜 말한다.
 * 알고리즘의 수행속도를 평가할 때는 **'처리해야 할 데이터의 수n에 대한 연산횟수의 함수 T(n)'** 으로 평가한다.
@@ -15,7 +15,10 @@
 * '최선의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우를, '최악의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우를 말한다.
 * **'평균적인 경우'** 는 시간 복잡도를 평가하는 정보로 의미를 지니지만, 대부분의 경우에는 알고리즘의 성능을 평가할 때 알고리즘의 안전성과 예측가능성을 보장해주는 **"최악의 경우 시간 복잡도"** 를 주로 사용한다.
 
-
+##### 2-1.순차 탐색 알고리즘의 시간 복잡도 : 최악의 경우(worst case)
+```cpp
+T(n) = n	//최악의 경우를 대상으로 정의하는 함수 T(n)(데이터 수 n에 대한 연산횟수의 함수)
+```
 
 
 
