--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -15,10 +15,22 @@
 * '최선의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우를, '최악의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우를 말한다.
 * **'평균적인 경우'** 는 시간 복잡도를 평가하는 정보로 의미를 지니지만, 대부분의 경우에는 알고리즘의 성능을 평가할 때 알고리즘의 안전성과 예측가능성을 보장해주는 **"최악의 경우 시간 복잡도"** 를 주로 사용한다.
 
-##### 2-1.순차 탐색 알고리즘의 시간 복잡도 : 최악의 경우(worst case)
+##### 2-1. 순차 탐색 알고리즘의 시간 복잡도 : 최악의 경우(worst case)
+* 최악의 경우의 연산회수는 탐색 대상이 배열에 존재하는 않을 경우이다.(n)
 ```cpp
 T(n) = n	//최악의 경우를 대상으로 정의하는 함수 T(n)(데이터 수 n에 대한 연산횟수의 함수)
 ```
+
+##### 2-2. 순차 탐색 알고리즘의 시간 복잡도 : 평균적인 경우(average case)
+* 평균적인 경우의 연산회수 계산을 위해서는 
+  * 가정 1. 탐색 대상이 배열에 존재하지 않을 확률을 50%라고 가정(n)
+  * 가정 2. 배열의 첫 요소부터 마지막 요소까지, 탐색 대상이 존재할 확률은 동일하다는 가정(n/2)
+```cpp
+T(n) = 3/4 * n	//가정1에 대한 연산횟수 50%( n * 1/2) + 가정2에 대한 연산횟수 50%( n/2 * 1/2)
+```
+
+
+
 
 
 
