--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -9,8 +9,8 @@
 |int|4바이트|-2,147,483,648이상 +-2,147,483,647이하|
 |long|4바이트|-2,147,483,648이상 +-2,147,483,647이하|
 |long long|8바이트|-9,223,372,036,854,775,808이상<br/> -9,223,372,036,854,775,807이하|
-|float|4바이트|+-3.4*10^-37이상 +-3.4*10^38이하|
-|double|8바이트|+-1.7*10^-307이상 +-1.7*10^308이하|
+|float|4바이트|+-3.4*10^-37이상 +-3.4*10^38이하(유효 자릿수 : 소수점 이하 6자리)|
+|double|8바이트|+-1.7*10^-307이상 +-1.7*10^308이하(유효 자릿수 : 소수점 이하 15자리)|
 |long double|8바이트 이상|double이상의 표현범위|
 
 * 정수형 자료형의 이름에 한해서 unsigned선언을 추가하면 0이상의 값만 표현하는 자료형이 되어서<br/>표현할 수 있는 값의 범위가 양의 정수 방향으로 두 배 더 넓어진다(unsigned char: 0이상 255이상).
