--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -61,12 +61,13 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 |서식문자|출력 대상(자료형)|출력 형태|서식문자|출력 대상(자료형)|출력 형태|
 |-|-|-|-|-|-|
 |%d|char, short, int|부호 있는 10진수 정수|%u|unsigned int|부호 없는 10진수 정수|
-|#ld|long|부호 있는 10진수 정수|%o|unsigned int|부호 없는 8진수 정수|
-|%lld|long long|부호 있는 10진수 정수|%x, %X|unsigned int|부호 없는 16진수 정수|
-|%f|float, double|10진수 방식의 부동소수점 실수|%e, %E|float, double|e또는 E방식의 부동소수점 실수|
-|%Lf|long double|10진수 방식의 부동소수점 실수|%g, %G|float, double|값에 따라 %f와 %e 사이에서 선택|
-|%c|char, short, int|값에 대응하는 문자|%s|char*|문자열|
-|%p|void*|포인터의 주소 값|
+|#ld|long|부호 있는 10진수 정수|%o|unsigned int|부호 없는 8진수 정수(ex : 7)|
+|%lld|long long|부호 있는 10진수 정수|%#o|unsigned int|부호 없는 8진수 형태 정수(ex : 07)|
+|%f|float, double|10진수 방식의 부동소수점 실수|%x, %X|unsigned int|부호 없는 16진수 정수(ex : d)|
+|%Lf|long double|10진수 방식의 부동소수점 실수|%#x|unsigned int|부호 없는 16지수 형태 정수<br/>(ex : 0xd)|
+|%c|char, short, int|값에 대응하는 문자|%e, %E|float, double|e또는 E방식의 부동소수점 실수|
+|%s|char*|문자열|%g, %G|float, double|값에 따라 %f와 %e 사이에서 선택|
+|%p|void*|포인터의 주소 값| | | |
 
 * 필드 폭을 지정하여 정돈된 출력 보이기
 
