--- a/C/learn/데이터의_표현.md
+++ b/C/learn/데이터의_표현.md
@@ -104,11 +104,11 @@ scanf("%d", &num);
 // 10진수를 2진수로 변환하여 출력
 printf("2진수: ");
 
-// 각 비트를 확인하여 출력
+// 각 비트(32비트)를 확인하여 출력
 for (i = sizeof(int) * 8 - 1; i >= 0; i--)
 {
- bit = (num >> i) & 1;  //>>비트 연산자는 i만큼 이동한다(i만큼 2로 나눈다).
- printf("%d", bit);     //2진수 출력
+ bit = (num >> i) & 1;  //>>비트 연산자는 i만큼 이동하고(i만큼 2로 나눈다), i번째 비트를 추출
+ printf("%d", bit);     //비트를 2진수로 출력
 }
 printf("\n");
 
