--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -44,21 +44,21 @@ int BSearch(int ar[], int len, int target) //이진 탐색 함수
 
  while(first <= last)
  {
-  mind = (first + last) / 2;
+  mind = (first + last) / 2;	//탐색 대상 중앙값 지정
 
   if(target == ar[mid]	//탐색 대상과  타켓이 일치하면
   {
-   return mid;
+   return mid;	//탐색 대상을 반환
   }
   else
   {
-   if(target < ar[mid])	//탐색 대상이 비교 대상보다 작으면 
+   if(target < ar[mid])	//탐색 대상이 타겟보다 작으면 
     last = mid - 1;
-   else
+   else	//탐색 대상이 타겟보다 크면
     first = mid + 1;
   }
  }
- return - 1;
+ return - 1;	//찾지 못했을 때 반환되는 값 -1
 }
 ```
 
