--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -62,6 +62,25 @@ int BSearch(int ar[], int len, int target) //이진 탐색 함수
 }
 ```
 
+* **이진탐색알고리즘의 시간 복잡도(최악의 경우를 기준으로)**
+  * 데이터의 수가 n일 때, 최악의 경우에 발생하는 비교연산의 횟수
+    * 1. n이 1이 되기까지 2로 나눈 횟수 k회 이므로 비교연산은 k회 진행 
+    * 2. 데이터가 1개 남았을 때 마지막으로 비교연산 1회 진행
+
+```
+최악의 경우에 대한 시간 복잡도 함수 T(n) = k + 1
+
+/*
+n이 1이 되기까지 2로 나눈 횟수 : n * (1/2)^k = 1 --> n * 2^(- k) = 1 --> n = 2^(k) --> log2(n) = k
+n에 대한 식 T(n)을 구성하는 목적은 데이터 수의 증가에 따른 연산횟수의 변화 정도를 판단하는 것이므로 
+log2(n)의 값이 매우 커서 +1이 중요하지 않다.(빅-오 표기법과 같은 이유)
+*/
+
+최악의 경우에 대한 시간 복잡도 함수 T(n) = log2(n)
+```
+
+
+
 
 
 
