--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -9,11 +9,14 @@
 
 #### 2. 알고리즘
 * 표현 및 저장된 데이터를 대상으로 하는 '문제의 해결 방법'을 뜻한다.
-* 알고리즘을 평가하는 두 가지 요소로 **'시간 복잡도(Time Complexity)'는 속도에 해당하는 알고리즘의 수행시간 분석결과**를, **'공간 복잡도(Space Complexity)'는 메모리 사용량에 대한 분석결과**를 가리켜 말한다.
 * 알고리즘의 수행속도를 평가할 때는 **'처리해야 할 데이터의 수n에 대한 연산횟수의 함수 T(n)'** 으로 평가한다.
-* 모든 알고리즘에는 **'최선의 경우(best case)'** 와 **'최악의 경우(worst case)'**, **'평균적인 경우(average case)'** 가 각각 존재한다.
-* '최선의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우를, '최악의 경우'는 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우를 말한다.
-* **'평균적인 경우'** 는 시간 복잡도를 평가하는 정보로 의미를 지니지만, 대부분의 경우에는 알고리즘의 성능을 평가할 때 알고리즘의 안전성과 예측가능성을 보장해주는 **"최악의 경우 시간 복잡도"** 를 주로 사용한다.
+* 알고리즘을 평가하는 두 가지 요소
+  * 시간 복잡도(Time Complexity) : 속도에 해당하는 알고리즘의 수행시간 분석결과
+  * 공간 복잡도(Space Complexity) : 메모리 사용량에 대한 분석결과
+* 알고리즘을 평가할 때 사용하는 케이스
+  * 최선의 경우(best case) : 처리해야 할 데이터의 수n에 대한 연산횟수가 가장 작은 경우
+  * 최악의 경우(worst case) : 처리해야 할 데이터의 수n에 대한 연산횟수가 n일 경우
+  * 평균적인 경우(average case) : 시간 복잡도를 평가하는 정보로 의미를 지니지만, 대부분의 경우에는 알고리즘의 성능을 평가할 때 알고리즘의 안전성과 예측가능성을 보장해주는 **"최악의 경우 시간 복잡도"** 를 주로 사용
 
 ##### 2-1. 순차 탐색 알고리즘의 시간 복잡도 : 최악의 경우(worst case)
 * 최악의 경우의 연산회수는 탐색 대상이 배열에 존재하는 않을 경우이다.(n)
@@ -62,7 +65,7 @@ int BSearch(int ar[], int len, int target) //이진 탐색 함수
 }
 ```
 
-* **이진탐색알고리즘의 시간 복잡도(최악의 경우를 기준으로)**
+* **이진탐색알고리즘의 시간 복잡도 : 최악의 경우**
   * 데이터의 수가 n일 때, 최악의 경우에 발생하는 비교연산의 횟수
     * 1. n이 1이 되기까지 2로 나눈 횟수 k회 이므로 비교연산은 k회 진행 
     * 2. 데이터가 1개 남았을 때 마지막으로 비교연산 1회 진행
