--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -82,6 +82,22 @@ log2(n)의 값이 매우 커서 +1이 중요하지 않다.(빅-오 표기법과 
 최악의 경우에 대한 시간 복잡도 함수 T(n) = log2(n)
 ```
 
+#### 빅-오 표기법(Big-Oh Notation)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
