--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -83,7 +83,8 @@ log2(n)의 값이 매우 커서 +1이 중요하지 않다.(빅-오 표기법과 
 ```
 
 #### 빅-오 표기법(Big-Oh Notation)
-
+* 빅-오는 '데이터 수의 증가에 따른 연산횟수의 증가 형태(패턴)'을 나타내는 표기법이다.
+* T(n)이 다항식으로 표현이 되면 최고차항의 차수가 빅-오가 된다.
 
 
 
