--- a/C/learn/메모리.md
+++ b/C/learn/메모리.md
@@ -87,6 +87,9 @@ void* realloc(void* ptr, size_t size)
 //예시
 int* arr = (int*)malloc(sizeof(int)*3);    //길이가 3인 int형 배열 할당
 arr = (int*)realloc(arr, sizeof(int)*5);    //길이가 5인 int형 배열로 확장
+
+int Size = 20;
+arr = (int*)realloc(arr,sizeof(int) * Size);    //길이가 Size인 int형 배열로 확장
 ```
 
 #### memcpy 함수
