--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -11,6 +11,8 @@
 
 **빅-오 종류**
 
+<img src = "https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/image/Big-O%20Complexity%20Chart.jpeg?raw=true" width ="600px" height ="400px" title ="Big-O 시간복잡도 그래프"><img/>
+
 * 1-1. O(1) - 상수 시간 (Constant Time)
   * 입력크기(데이터 수)에 상관없이 항상 일정한 시간이 걸리는(연산횟수가 고정인) 유형의 알고리즘
   * ex : 배열의 첫 번째 요소에 접근하기, 두 개의 숫자를 더하기
