--- a/자료구조/learn/접근적_표기법.md
+++ b/자료구조/learn/접근적_표기법.md
@@ -21,19 +21,19 @@
   * ex : 배열의 첫 번째 요소에 접근하기, 두 개의 숫자를 더하기
 
 * 1-2. O(logn) - 로그 시간 (Logarithmic Time)
-  * 입력크기(데이터 수의 증가율)에 비해서 실행 시간(연산횟수의 증가율)이 휠씬 낮은 로그 형태의 알고리즘
+  * 입력크기(데이터 수의 증가율)에 비해서 실행 시간(연산횟수의 증가율)이 휠씬 낮은 로그 형태의 알고리즘(반복문)
   * ex : 이진 탐색(Binary Search)
 
 * 1-3. O(n) - 선형 시간 (Linear Time)
-  * 입력 크기에 비례하여 실행 시간이 증가하는 알고리즘(직선 모양, 1차원)
+  * 입력 크기에 비례하여 실행 시간이 증가하는 알고리즘(직선 모양(선형), 1차원)
   * ex : 배열에서 특정 값을 찾기(순차 탐색 알고리즘)
 
 * 1-4. O(n log n) - 선형 로그 시간 (Linearithmic Time)
-  * 입력 크기가 증가할수록 실행 시간이 n과 log n의 곱으로 증가하는 알고리즘
+  * 입력 크기가 증가할수록 실행 시간이 n과 log n의 곱으로 증가하는 알고리즘(비선형,분할과 정복 알고리즘)
   * ex : 합병 정렬(Merge Sort), 퀵 정렬(Quick Sort)
 
 * 1-5. O(n^2) - 이차 시간 (Quadratic Time)
-  * 입력 크기에 따라 실행 시간이 n의 제곱에 비례하여 증가하는 알고리즘(면적 모양, 2차원)
+  * 입력 크기에 따라 실행 시간이 n의 제곱에 비례하여 증가하는 알고리즘(면적 모양, 2차원, 2중 반복문)
   * ex : 버블 정렬(Bubble Sort), 삽입 정렬(Insertion Sort)
 
 * 1-6. O(n^3) - (Polynomial / Cubic Time)
