--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -197,7 +197,7 @@ strncpy(str3, str1, sizeof(str3) - 1);
 * 문자열의 뒤에 **다른 문자열을 복사하는 기능**을 제공하는 함수이다.
 * 덧붙임이 시작되는 위치는 **널 문자 다음이 아닌 널 문자가 저장된 위치에서부터 복사가 진행**됨으로써 덧붙임 이후에도 **문자열 끝에 하나의 널문자가 존재**한다.
 ```cpp
-#include <string>
+#include <string.h>
 
 //덧붙여진 문자열의 주소 값 반환
 char* strcat(char* dest, const char* src);
