--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -11,7 +11,7 @@
 * 알고리즘을 평가하는 두 가지 요소
   * 시간 복잡도(Time Complexity) : 속도에 해당하는 알고리즘의 수행시간 분석결과
   * 공간 복잡도(Space Complexity) : 메모리 사용량에 대한 분석결과
-
+* 알고리즘 성능 표현하는 방법 : [접근적 표기법](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%A0%91%EA%B7%BC%EC%A0%81_%ED%91%9C%EA%B8%B0%EB%B2%95.md)
 
 
 
