--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -4,11 +4,11 @@
   * 기저 조건 : 재귀 호출을 멈추는 조건. 이 조건이 없으면 함수는 무한히 자신을 호출하게 되어 스택 오버플로우(Stack Overflow)를 일으킨다.
   * 재귀 호출 : 함수를 다시 호출하여 더 작은 문제로 분할하는 부분
 * 장점
-  * 코드가 간결하고 이해하기 쉬운편.
-  * 문제를 분할하여 해결하므로 복잡한 문제를 단순하게 풀 수 있음.
+  * 문제를 더 작은 문제로 나누어 해결할 수 있어 코드가 직관적이고 이해하기 쉽다.
+  * 특정 알고리즘(예: 하노이 탑, 탐색 알고리즘)에서 매우 유용
 * 단점
-  * 재귀 호출이 많아지면 함수 호출 스택이 커져 메모리 사용량이 증가.
-  * 각 함수 호출에 대한 오버헤드(함수를 호출할때 함수 내용이 아닌 함수를 호출하는데 들어가는 비용).
+  * 재귀 호출이 많아지면 함수 호출 스택이 커져 메모리 사용량이 증가(오버플로우).
+  * 각 함수 호출에 대한 오버헤드(함수를 호출할때 함수 내용이 아닌 함수를 호출하는데 들어가는 비용(메모리와 시간))가 발생.
   * 기저 조건을 잘못 설정하면 무한 루프에 빠질 수 있다.
 * 재귀함수의 최적화 - 메모이제이션(Memoization)
   * 이미 계산한 값을 저장하여 동일한 계산을 반복하지 않도록 할 수 있다.
