--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -75,11 +75,22 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double atanh (double x);|x의 쌍곡선 아크탄젠트 값 반환|
 
 #### 4. stdlib.h
-* ANSI 표준에서 난수를 생성할 때 호출할 수 있는 함수를 제공해준다.
-* int rand(void) : 난수를 생성할 때 사용할 수 있는 함수. 의사 난수(pseudo - random number)를 반환한다.
-* RAND_MAX : 생성될 수 있는 난수의 최대값(stdlib.h에 선언되어 있는 상수). 즉 rand함수는 0이상 RAND_MAX 이하의 값을 반환한다.
-* void srand(unsigned int seed) : 발생할 난수의 씨드 값을 지정
-* 다음 두 함수는 수학관련 함수임에도 불구하고 정수형 연산을 하는 함수이기 때문에 헤더파일 stdlib.h에 선언되어 있다.
+*  C 언어의 표준 라이브러리 헤더 파일 중 하나로서 일반적인 유틸리티 함수들을 포함하고 있다.
+* 이 헤더 파일은 동적 메모리 관리, 난수 생성, 환경 변수 접근, 프로세스 제어 등을 위한 함수들이 정의한다.
+
+##### 4-1. 동적 메모리 관리
+|함수 원형|기능|
+|-|-|
+|int abs(int x);|x의 절대값 반환|
+|int labs(long x);|x의 절대값 반환|
+|int abs(int x);|x의 절대값 반환|
+|int labs(long x);|x의 절대값 반환|
+
+|함수 원형|기능|
+|-|-|
+|va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
+|va_start(x, n)|참조자가 가변인자를 참조(x는 변수, n은 참조할 인자의 개수 정보)|
+
 
 |함수 원형|기능|
 |-|-|
@@ -88,6 +99,19 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 #### 5. stdarg.h 
 * [가변인자에 대한 매개변수의 선언방법](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%ED%95%A8%EC%88%98.md#%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98)
+
+|함수 원형|기능|
+|-|-|
+|int abs(int x);|x의 절대값 반환|
+|int labs(long x);|x의 절대값 반환|
+|int abs(int x);|x의 절대값 반환|
+|int labs(long x);|x의 절대값 반환|
+
+|함수 원형|기능|
+|-|-|
+|va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
+|va_start(x, n)|참조자가 가변인자를 참조(x는 변수, n은 참조할 인자의 개수 정보)|
+
 
 |함수 원형|기능|
 |-|-|
