--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -81,37 +81,40 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 ##### 4-1. 동적 메모리 관리
 |함수 원형|기능|
 |-|-|
-|int abs(int x);|x의 절대값 반환|
-|int labs(long x);|x의 절대값 반환|
-|int abs(int x);|x의 절대값 반환|
-|int labs(long x);|x의 절대값 반환|
+|void* malloc(size_t size)|지정한 바이트 수 만큼의 메모리를 할당|
+|void* calloc(size_t num, size_t size)|초기화된 메모리를 할당|
+|void* realloc(void* ptr, size_t size)|기존 메모리 블록을 새로운 크기로 변경|
+|void free(void* ptr)|할당된 메모리를 해제|
 
+##### 4-2. 난수 생성
 |함수 원형|기능|
 |-|-|
-|va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
-|va_start(x, n)|참조자가 가변인자를 참조(x는 변수, n은 참조할 인자의 개수 정보)|
+|int rand()|0에서 'RAND_MAX'사이의 정수를 반환|
+|void srand(unsigned int seed)|난수 생성기의 시드를 설정|
 
-
+##### 4-3. 정수 변환
 |함수 원형|기능|
 |-|-|
-|int abs(int x);|x의 절대값 반환|
-|int labs(long x);|x의 절대값 반환|
+|int atoi(const char* str)|문자열을 정수(int)로 변환|
+|long atol(const char* str)|문자열을 장정수(long)로 변환|
+|long long atoll(const char* str)|문자열을 장정수(long long)로 변환|
+|long strtol(const char* str, char** endptr, int base)|문자열을 long형 정수로 변환|
+|unsigned long strtoul(const char* str, char** endptr, int base)|문자열을 unsigned long형 정수로 변환|
+|long long strtoll(const char* str, char** endptr, int base)|문자열을 long long형 정수로 변환|
+|unsigned long long strtoull(const char* str, char** endptr, int base)|문자열을 unsigned long long형 정수로 변환|
+
+##### 4-4. 유틸리티 함수
+|함수 원형|기능|
+|-|-|
+|int abs(int n);|정수 n의 절대값 반환|
+|int labs(long n);|x의 절대값 반환|
+
+
+
+
 
 #### 5. stdarg.h 
 * [가변인자에 대한 매개변수의 선언방법](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%ED%95%A8%EC%88%98.md#%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98)
-
-|함수 원형|기능|
-|-|-|
-|int abs(int x);|x의 절대값 반환|
-|int labs(long x);|x의 절대값 반환|
-|int abs(int x);|x의 절대값 반환|
-|int labs(long x);|x의 절대값 반환|
-
-|함수 원형|기능|
-|-|-|
-|va_list x|가변인자를 가리킬 수 있는 참조자를 선언(x는 변수)|
-|va_start(x, n)|참조자가 가변인자를 참조(x는 변수, n은 참조할 인자의 개수 정보)|
-
 
 |함수 원형|기능|
 |-|-|
