--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -79,6 +79,10 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 * 이 헤더 파일은 동적 메모리 관리, 난수 생성, 환경 변수 접근, 프로세스 제어 등을 위한 함수들이 정의한다.
 
 ##### 4-1. 동적 메모리 관리
+* num : 할당할 요소의 개수 
+* size : 각 요소의 크기(바이트 단위)
+* ptr : 원래 메모리 블록을 가리키는 포인터
+
 |함수 원형|기능|
 |-|-|
 |void* malloc(size_t size)|지정한 바이트 수 만큼의 메모리를 할당|
@@ -87,12 +91,18 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |void free(void* ptr)|할당된 메모리를 해제|
 
 ##### 4-2. 난수 생성
+* seed : 시드 값
+
 |함수 원형|기능|
 |-|-|
 |int rand()|0에서 'RAND_MAX'사이의 정수를 반환|
 |void srand(unsigned int seed)|난수 생성기의 시드를 설정|
 
 ##### 4-3. 정수 변환
+* str : 변환할 문자열
+* endptr : 변환이 끝난 위치를 가리키는 포인터(숫자로 변환할 수 없는 문자열(문자열의 나머지 부분))
+* base : 변환할 숫자의 진수(base)
+
 |함수 원형|기능|
 |-|-|
 |int atoi(const char* str)|문자열을 정수(int)로 변환|
@@ -104,10 +114,19 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |unsigned long long strtoull(const char* str, char** endptr, int base)|문자열을 unsigned long long형 정수로 변환|
 
 ##### 4-4. 유틸리티 함수
+* numer : 분자
+* demon : 분모
+* div : 구조체
+
 |함수 원형|기능|
 |-|-|
 |int abs(int n);|정수 n의 절대값 반환|
-|int labs(long n);|x의 절대값 반환|
+|long labs(long n);|long 정수 n의 절대값 반환|
+|long long llabs(long long n)|long long 정수 n의 절대값 반환|
+|div_t div(int numer, int denom)|두 정수의 나눗셈 결과를 구조체로 반환|
+|ldiv_t ldiv(long numer,long demon)|두 long정수의 나눗셈 결과를 구조체로 반환|
+|lldiv_t lldiv(long long numer, long long demon)|두 long long정수의 나눗셈 결과를 구조체로 반환|
+
 
 
 
