--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -116,7 +116,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 ##### 4-4. 유틸리티 함수
 * numer : 분자
 * demon : 분모
-* div : 구조체
+* div_t : stdlib.h에 정의된 구조체 타입으로서 몫과 나머지를 해당하는 정수를 가짐
 
 |함수 원형|기능|
 |-|-|
@@ -127,7 +127,24 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |ldiv_t ldiv(long numer,long demon)|두 long정수의 나눗셈 결과를 구조체로 반환|
 |lldiv_t lldiv(long long numer, long long demon)|두 long long정수의 나눗셈 결과를 구조체로 반환|
 
+##### 4-5. 프로그램 종료
+* status : 종료 상태 코드
+* func : 종료 시 호출될 함수
 
+|함수 원형|기능|
+|-|-|
+|void abort(void)|비정상적으로 프로그램 종료|
+|void exit(int status)|정상 또는 비정상적으로 프로그램 종료|
+|int atexit(void(*func)(void))|프로그램 종료될 때 호출될 함수를 등록(성공 시 0, 실패시 0이 아닌 값 반환)|
+
+##### 4-6. 환경 변수
+* name : 환경 변수 이름
+* command : 실행할 명령어 문자열
+
+|함수 원형|기능|
+|-|-|
+|char* getenv(const char* name)|환경 변수의 값을 반환(환경 변수값 없을 경우 NULL)|
+|int system(const char* command)|시스템 명령을 실행|
 
 
 
