--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -138,6 +138,8 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |int atexit(void(*func)(void))|프로그램 종료될 때 호출될 함수를 등록(성공 시 0, 실패시 0이 아닌 값 반환)|
 
 ##### 4-6. 환경 변수
+* 운영 체제에서 실행되는 프로세스들에게 설정 정보나 상태 정보를 전달하기 위해 사용하는 변수
+* 시스템 전체 또는 특정 사용자에 대해 설정될 수 있으며, 운영 체제 및 다양한 응용 프로그램이 이를 활용하여 설정 정보를 읽고 실행 환경을 조정
 * name : 환경 변수 이름
 * command : 실행할 명령어 문자열
 
