--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -75,7 +75,7 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |double atanh (double x);|x의 쌍곡선 아크탄젠트 값 반환|
 
 #### 4. stdlib.h
-*  C 언어의 표준 라이브러리 헤더 파일 중 하나로서 일반적인 유틸리티 함수들을 포함하고 있다.
+* C 언어의 표준 라이브러리 헤더 파일 중 하나로서 일반적인 유틸리티 함수들을 포함하고 있다.
 * 이 헤더 파일은 동적 메모리 관리, 난수 생성, 환경 변수 접근, 프로세스 제어 등을 위한 함수들이 정의한다.
 
 ##### 4-1. 동적 메모리 관리
@@ -148,9 +148,6 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |char* getenv(const char* name)|환경 변수의 값을 반환(환경 변수값 없을 경우 NULL)|
 |int system(const char* command)|시스템 명령을 실행|
 
-
-
-
 #### 5. stdarg.h 
 * [가변인자에 대한 매개변수의 선언방법](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%ED%95%A8%EC%88%98.md#%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98)
 
@@ -161,7 +158,9 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |va_arg(x,void*)|가변인자에 대한 값을 추출(x는 변수, void*는 차조 대상의 자료형)|
 |va_end(x)|참조자가 가변인자를 참조하지 않도록 해제(x는 변수)|
 
-
+#### 6. string.h
+* C 언어의 표준 라이브러리 헤더 파일 중 하나로서 문자열을 처리하기 위한 다양한 함수들을 정의한다.
+* 문자열 복사, 연결, 비교, 검색, 길이 계산 등의 작업을 수행할 수 있다.
 
 
 
