--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -85,18 +85,18 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기능|
 |-|-|
-|void* malloc(size_t size)|지정한 바이트 수 만큼의 메모리를 할당|
-|void* calloc(size_t num, size_t size)|초기화된 메모리를 할당|
-|void* realloc(void* ptr, size_t size)|기존 메모리 블록을 새로운 크기로 변경|
-|void free(void* ptr)|할당된 메모리를 해제|
+|void* malloc(size_t size);|지정한 바이트 수 만큼의 메모리를 할당|
+|void* calloc(size_t num, size_t size);|초기화된 메모리를 할당|
+|void* realloc(void* ptr, size_t size);|기존 메모리 블록을 새로운 크기로 변경|
+|void free(void* ptr);|할당된 메모리를 해제|
 
 ##### 4-2. 난수 생성
 * seed : 시드 값
 
 |함수 원형|기능|
 |-|-|
-|int rand()|0에서 'RAND_MAX'사이의 정수를 반환|
-|void srand(unsigned int seed)|난수 생성기의 시드를 설정|
+|int rand();|0에서 'RAND_MAX'사이의 정수를 반환|
+|void srand(unsigned int seed);|난수 생성기의 시드를 설정|
 
 ##### 4-3. 정수 변환
 * str : 변환할 문자열
@@ -105,13 +105,13 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기능|
 |-|-|
-|int atoi(const char* str)|문자열을 정수(int)로 변환|
-|long atol(const char* str)|문자열을 장정수(long)로 변환|
-|long long atoll(const char* str)|문자열을 장정수(long long)로 변환|
-|long strtol(const char* str, char** endptr, int base)|문자열을 long형 정수로 변환|
-|unsigned long strtoul(const char* str, char** endptr, int base)|문자열을 unsigned long형 정수로 변환|
-|long long strtoll(const char* str, char** endptr, int base)|문자열을 long long형 정수로 변환|
-|unsigned long long strtoull(const char* str, char** endptr, int base)|문자열을 unsigned long long형 정수로 변환|
+|int atoi(const char* str);|문자열을 정수(int)로 변환|
+|long atol(const char* str);|문자열을 장정수(long)로 변환|
+|long long atoll(const char* str);|문자열을 장정수(long long)로 변환|
+|long strtol(const char* str, char** endptr, int base);|문자열을 long형 정수로 변환|
+|unsigned long strtoul(const char* str, char** endptr, int base);|문자열을 unsigned long형 정수로 변환|
+|long long strtoll(const char* str, char** endptr, int base);|문자열을 long long형 정수로 변환|
+|unsigned long long strtoull(const char* str, char** endptr, int base);|문자열을 unsigned long long형 정수로 변환|
 
 ##### 4-4. 유틸리티 함수
 * numer : 분자
@@ -122,10 +122,10 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |-|-|
 |int abs(int n);|정수 n의 절대값 반환|
 |long labs(long n);|long 정수 n의 절대값 반환|
-|long long llabs(long long n)|long long 정수 n의 절대값 반환|
-|div_t div(int numer, int denom)|두 정수의 나눗셈 결과를 구조체로 반환|
-|ldiv_t ldiv(long numer,long demon)|두 long정수의 나눗셈 결과를 구조체로 반환|
-|lldiv_t lldiv(long long numer, long long demon)|두 long long정수의 나눗셈 결과를 구조체로 반환|
+|long long llabs(long long n);|long long 정수 n의 절대값 반환|
+|div_t div(int numer, int denom);|두 정수의 나눗셈 결과를 구조체로 반환|
+|ldiv_t ldiv(long numer,long demon);|두 long정수의 나눗셈 결과를 구조체로 반환|
+|lldiv_t lldiv(long long numer, long long demon);|두 long long정수의 나눗셈 결과를 구조체로 반환|
 
 ##### 4-5. 프로그램 종료
 * status : 종료 상태 코드
@@ -133,9 +133,9 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기능|
 |-|-|
-|void abort(void)|비정상적으로 프로그램 종료|
-|void exit(int status)|정상 또는 비정상적으로 프로그램 종료|
-|int atexit(void(*func)(void))|프로그램 종료될 때 호출될 함수를 등록(성공 시 0, 실패시 0이 아닌 값 반환)|
+|void abort(void);|비정상적으로 프로그램 종료|
+|void exit(int status);|정상 또는 비정상적으로 프로그램 종료|
+|int atexit(void(*func)(void));|프로그램 종료될 때 호출될 함수를 등록(성공 시 0, 실패시 0이 아닌 값 반환)|
 
 ##### 4-6. 환경 변수
 * 운영 체제에서 실행되는 프로세스들에게 설정 정보나 상태 정보를 전달하기 위해 사용하는 변수
@@ -145,10 +145,10 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기능|
 |-|-|
-|char* getenv(const char* name)|환경 변수의 값을 반환(환경 변수값 없을 경우 NULL)|
-|int system(const char* command)|시스템 명령을 실행|
+|char* getenv(const char* name);|환경 변수의 값을 반환(환경 변수값 없을 경우 NULL)|
+|int system(const char* command);|시스템 명령을 실행|
 
-#### 5. stdarg.h 
+#### 5. stdarg.h (수정 필요)
 * [가변인자에 대한 매개변수의 선언방법](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%ED%95%A8%EC%88%98.md#%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98)
 
 |함수 원형|기능|
@@ -164,7 +164,26 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 
 |함수 원형|기능|
 |-|-|
-|size
+|size_t strlen(const char* str);|문자열의 길이를 반환|
+|char* strcpy(char* dest, const char* src);|한 문자열을 다른 문자열로 복사|
+|char* strncpy(char* dest, const char* src, size_t n);|지정된 길이만큼 문자열을 복사|
+|char* strcat(char* dest, const char* src);|두 문자열을 연결|
+|char* strncat(char* dest, const char* src, size_t n);|지정된 길이만큼 문자열을 연결|
+|int strcmp(const char* str1, const char* str2);|두 문자열을 비교|
+|int strncmp(const char* str1, const char* str2, size_t n);|지정된 길이만큼 두 문자열을 비교|
+|char* strchr(const char* str, int c);|문자열에서 특정 문자의 첫 번째 발생 위치를 탐색|
+|char* strrchr(const char* str, int c);|문자열에서 특정 문자의 마지막 발생 위치를 탐색|
+|char* strstr(const char* haystack, const char* needle);|문자열에서 다른 문자열의 첫 번째 발생 위치를 탐색|
+|char* strdup(const char* str);|문자열을 복사하여 새로 할당된 메모리에 저장|
+|char* strtok(char* str, const char* delim);|문자열을 특정 구분자를 기준으로 나눔|
+
+
+
+
+
+
+
+
 
 
 
