--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -177,7 +177,9 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |char* strdup(const char* str);|문자열을 복사하여 새로 할당된 메모리에 저장|
 |char* strtok(char* str, const char* delim);|문자열을 특정 구분자를 기준으로 나눔|
 
-
+* const char* str : 호출할 문자열을 가리키는 포인터.
+* char* dest :
+* const char* src :  복사 또는 연결할 원본 문자열을 가리키는 포인터.
 
 
 
