--- a/C/learn/헤더파일.md
+++ b/C/learn/헤더파일.md
@@ -177,9 +177,15 @@ rand()% a +b;	//a는 난수 범위이고 b는 난수의 첫값에 대한 보정 
 |char* strdup(const char* str);|문자열을 복사하여 새로 할당된 메모리에 저장|
 |char* strtok(char* str, const char* delim);|문자열을 특정 구분자를 기준으로 나눔|
 
-* const char* str : 호출할 문자열을 가리키는 포인터.
-* char* dest :
-* const char* src :  복사 또는 연결할 원본 문자열을 가리키는 포인터.
+* const char* str : 호출할 문자열을 가리키는 포인터
+* char* dest : 문자열을 저장또는 복사할 대상 버퍼를 가리키는 포인터
+* const char* src :  복사 또는 연결할 원본 문자열을 가리키는 포인터
+* size_t n : 최대 문자 수를 지정. src 문자열의 길이가 n보다 작으면 나머지 부분은 null 문자 \0로 채우고(복사), src가 n보다 작으면 전체 src 문자열이 dest에 연결(연결).
+* int c : 찾을 문자.'char'로 변환된다.
+* const char* haystack : 검색할 대상 문자열을 가리키는 포인터
+* const char* needle : 찾을 하위 문자열을 가리키는 포인터
+* char* str : 분할할 원본 문자열을 가리키는 포인터. 처음 호출할 때는 이 인수에 문자열을 전달하고, 이후 호출할 때는 NULL을 전달한다.
+* const char* delim : 분자 문자열을 가리키는 포인터로서 분할할 때 사용할 구분자 문자들을 포함한다.
 
 
 
