--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -31,7 +31,7 @@ int fputc(int c, FILE* stream);	//fputc 함수의 두 번째 매개변수 stream
 #include <stdio.h>
 
 //파일의 끝에 도달하거나 함수호출 실패 시 EOF 반환
-int getchar(void);
+int getchar(void);	//입력버퍼에 남아있는 개행 문자(\n)를 getchar() 사용하여 처리할 수 있다. 
 int fgetc(FILE* stream);
 
 int fputs("이름 입력 : ",stdout);//이름 입력을 출력
