--- a/C/learn/포인터.md
+++ b/C/learn/포인터.md
@@ -14,6 +14,10 @@ pnum	  //포인터 변수의 이름(int형 포인터 변수 pnum)
 double * pnum1;
 double* pnum1;
 double *pnum1;
+
+//변수와 포인터변수가 혼동할 수 있으므로 대체적으로 char *pnum을 사용
+char* pnum1, pnum2;  //pnum1은 포인터 변수이지만 pnum2는 변수로 선언됨.
+char *pnum1, *pnum2;  //pnum1과 pnum2는 포인터 변수로 선언.
 ```
 
 #### &연산자
