--- a/C/learn/데이터의_표현.md
+++ b/C/learn/데이터의_표현.md
@@ -59,7 +59,7 @@ int num3 = 0xA	//정수 10( 16진수 )
 : 고정 소수점은 소수점을 사용하여 고정된 자리수의 소수를 나타내는 것이다. 한정된 메모리에서 부동소수점 방식보다 좁은 범위의 수만 나타낼 수 있다.
 
 ```cpp
-float = 23.89	//정수.소수
+float num = 23.89	//정수.소수
 ```
 
 부동 소수점 방식
