--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -53,7 +53,12 @@ int fputs(const char* s, FILE* stream);
 ```
 #### 4. 문자열 입력 함수(gets, fgets)
 * **gets 함수**는 미리 마련해 놓은 배열을 넘어서는 길이의 문자열이 입력되면, 할당 받지 않는 메모리 공간을 침범하여 실행 중 오류가<br/> 발생한다는 단점이 있다.
+  * **fgets 함수가 NULL을 반환하는 경우**
+  1. 파일의 끝에 도달한 경우 (EOF): 파일 끝에 도달하면 fgets는 NULL을 반환
+  2. 읽기 중 오류가 발생한 경우: 입력 스트림에서 읽기 오류가 발생하면 fgets는 NULL을 반환
+  3. 아무것도 입력하지 않고 바로 EOF를 입력한 경우: 표준 입력에서 아무것도 입력하지 않고 바로 EOF를 입력하면 fgets는 NULL을 반환
 * **fgets 함수**는 stdin으로부터 문자열을 입력 받아서 **sizeof(str)의 길이만큼만 배열 str에 저장**한다.
+* **fgets 함수**는 아무것도 입력하지 않았을 때, 즉 빈 줄(엔터 키만 입력)일 경우에는 fgets가 NULL을 반환하지 않는다. 대신 **개행 문자를 포함한 빈 문자열을 반환**한다.
 ```cpp
 #include <stdio.h>
 
