--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -26,15 +26,25 @@ int fputc(int c, FILE* stream);	//fputc 함수의 두 번째 매개변수 stream
 #### 2. 문자 입력 함수(getchar, fgetc)
 * **getchar 함수**는 stdin으로 표현되는 표준 입력 스트림으로부터 하나의 문자를 입력 받아서 반환하는 함수이다.
 * **fgetc 함수**는 getchar함수와 같이 하나의 문자를 입력 받는 함수이지만, **문자를 입력 받을 스트림을 지정**할 수 있다.
-
+* **getchar 함수의 주요 특징**
+  * 단일 문자 읽기: getchar는 한 번에 한 문자씩 읽는다.
+  * 버퍼링: 사용자가 Enter 키를 누를 때까지 입력을 받지 않는다. Enter 키를 누르면 한 줄의 입력이 버퍼에 저장되고, 그 중 첫 번째 문자를 반환
+  * 개행 문자 처리: Enter 키를 누르면 개행 문자('\n')도 입력 버퍼에 저장되며, getchar는 이를 그대로 반환
+  * EOF 처리: 파일 끝 또는 입력 스트림의 끝에 도달하거나 읽기 오류가 발생하면 EOF를 반환
 ```cpp
 #include <stdio.h>
 
 //파일의 끝에 도달하거나 함수호출 실패 시 EOF 반환
-int getchar(void);	//입력버퍼에 남아있는 개행 문자(\n)를 getchar() 사용하여 처리할 수 있다. 
-int fgetc(FILE* stream);
+int ch = getchar();
+if (ch == EOF)
+    break;
 
-int fputs("이름 입력 : ",stdout);//이름 입력을 출력
+//'scanf' 호출 이후, 입력버퍼에 남아있는 개행 문자(\n)를 getchar() 사용하여 처리할 수 있다. 
+int getchar(void);
+int fgetc(FILE *stream);
+
+//이름 입력을 출력
+int fputs("이름 입력 : ",stdout);
 ```
 * **문자 단위 입출력 함수의 존재 이유**<br/>
 **print**와 **scanf 함수**는 본래 서식지정을 통해서 **새로운 입출력의 형태를 구성하는 함수**이다.
