--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -77,7 +77,7 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 ```
 
 ### scanf함수
-
+* 표준 입력에서 형식화된 데이터를 읽어들이는 함수
 * 서식문자의 종류와 의미
 
 |서식문자|입력 대상|입력 형태|서식문자|입력 대상|입력 형태|
@@ -90,3 +90,18 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 |%o|int|부호 없는 8진수 정수|%x|int|부호 없는 16진수 정수|
 |%f|float|10진수 방식의 부동소수점 실수|%lf|double|10진수 방식의 부동소수점 실수|
 |%Lf|long double|10진수 방식의 부동소수점 실수|
+
+* 형식 지정자에 따른 개행 문자 처리 방식  
+  * 정수형 형식 지정자(%d, %i, %u, %o, %x, %X)
+    - 공백(스페이스, 탭, 개행 문자)과 개행문자를 무시하고 정수를 입력 받는다.
+  * 실수형 형식 지정자 (%f, %e, %E, %g, %G, %a, %A)
+    - 공백과 개행문자를 무시하고 정수를 입력 받는다.
+  * 문자형 형식 지정자 (%c)
+    - 공백을 포함한 모든 문자(개행 문자 포함)를 입력 받는다.
+  * 문자열 형식 지정자 (%s)
+    - 공백과 개행문자를 무시하고 첫 번째 공백를 만나기 전까지 문자열을 입력 받는다.
+  * scanf 함수 사용 시 버퍼에 존재하는 개행 문자를 처리하는 방법
+    - 형식 지정자 앞에 공백이 있으면 입력에서 공백을 무시한다. 즉 입력이 끝나면 개행 문자가 버퍼에 남지 않는다.
+
+
+
