--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -94,22 +94,33 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 * 형식 지정자에 따른 개행 문자 처리 방식  
   * 정수형 형식 지정자(%d, %i, %u, %o, %x, %X)
     - 공백(스페이스, 탭, 개행 문자)를 무시하고 정수를 입력 받는다.
-    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자(\n)가 입력 받게 된다.
+    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자(\n)가 입력 받을 수 있다.
   * 실수형 형식 지정자 (%f, %e, %E, %g, %G, %a, %A)
     - 공백를 무시하고 정수를 입력 받는다.
-    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자가 입력 받게 된다.
+    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자가 입력 받을 수 있다.
   * 문자형 형식 지정자 (%c)
     - 공백을 포함한 모든 문자(개행 문자 포함)를 입력 받는다.
     - 버퍼에 남아있는 엔터키(개행 문자)가 다른 입력함수에 입력으로 처리될 수 있다.
     - 형식 지정자 앞의 공백으로 입력에서 모든 공백 문자를 무시하고, 다음 유효한 문자를 읽는다.
-  ```cpp
+```cpp
   scanf(" %c", &ch); //%c 앞에 공백
-  ```
+```
   * 문자열 형식 지정자 (%s)
     - 공백를 무시하고 첫 번째 공백를 만나기 전까지 문자열을 입력 받는다.
-    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자가 입력 받게 된다.
-  * fgets를 사용 시 개행문자 처리하는 방식
-    - getchar()을 사용하여 개행문자를 비움
+    - 이어서 fgets 사용시, Enter 키로 인해 버퍼에 개행문자가 입력 받을 수 있다.
+  * fgets를 사용으로 개행문자를 입력 받을 시 처리하는 방식
+    - getchar()을 사용하여 개행문자를 비운다.
+```cpp
+#include <stdio.h>
 
-
+int main()
+{
+  char arr[100] ="";
+  int num =0;
+  scanf("%d", &num);
+  getchar();
+  for(int i= 0; i<10 ; i++)
+    fgets(arr,100,stdin);
+}
+```
 
