--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -6,9 +6,9 @@
 |-|-|-|
 |char|1바이트|-128이상 +127이하|
 |short|2바이트|-32,768이상 +32,767이하|
-|int|4바이트|-2,147,483,648이상 +-2,147,483,647이하|
-|long|4바이트|-2,147,483,648이상 +-2,147,483,647이하|
-|long long|8바이트|-9,223,372,036,854,775,808이상<br/> -9,223,372,036,854,775,807이하|
+|int|4바이트|-2,147,483,648이상 +2,147,483,647이하|
+|long|4바이트|-2,147,483,648이상 +2,147,483,647이하|
+|long long|8바이트|-9,223,372,036,854,775,808이상<br/> +9,223,372,036,854,775,807이하|
 |float|4바이트|+-3.4*10^-37이상 +-3.4*10^38이하(소수점 이하 정밀도 : 6자리)|
 |double|8바이트|+-1.7*10^-307이상 +-1.7*10^308이하(소수점 이하 정밀도 : 15자리)|
 |long double|8바이트 이상|double이상의 표현범위(소수점 이하 정밀도 : 18자리)|
