--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -1,4 +1,4 @@
-### 1. 재귀함수
+### 재귀함수
 * 함수가 자신을 다시 호출하는 프로그래밍 기법으로서 문제를 더 작은 문제로 분할하여 해결하기 위해 사용한다.
 * 기본구조
   * 기저 조건 : 재귀 호출을 멈추는 조건. 이 조건이 없으면 함수는 무한히 자신을 호출하게 되어 스택 오버플로우(Stack Overflow)를 일으킨다.
@@ -13,8 +13,24 @@
 * 재귀함수의 최적화 - 메모이제이션(Memoization)
   * 이미 계산한 값을 저장하여 동일한 계산을 반복하지 않도록 할 수 있다.
 
+#### 1. 팩토리얼(factorial)
+* 팩토리얼 값을 반환하는 함수를 재귀적으로 구현
 
-
+``cpp
+/*
+f(n) = { n * f(n-1)  ...n>=1  //정수 n이 1보다 크거나 같으면 n * f(n-1)을 반환
+       {1            ...n=0  //정수 n이 0이면 1을 반환
+*/
+int Factorial(int n)
+{
+  if(n == 0)
+    return 1;
+  else
+    return n * Factorial;
+}
+```
+ 
+#### 2. 피보나치 수열
 
 
 
