--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -16,7 +16,7 @@
 #### 1. 팩토리얼(factorial)
 * 팩토리얼 값을 반환하는 함수를 재귀적으로 구현
 
-``cpp
+```cpp
 /*
 f(n) = { n * f(n-1)  ...n>=1  //정수 n이 1보다 크거나 같으면 n * f(n-1)을 반환
        {1            ...n=0  //정수 n이 0이면 1을 반환
