--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -18,8 +18,8 @@
 
 ```cpp
 /*
-f(n) = { n * f(n-1)  ...n>=1  //정수 n이 1보다 크거나 같으면 n * f(n-1)을 반환
-       {1            ...n=0  //정수 n이 0이면 1을 반환
+f(n) = { n * f(n-1)  ....n>=1  //정수 n이 1보다 크거나 같으면 n * f(n-1)을 반환
+       {1            ....n=0  //정수 n이 0이면 1을 반환
 */
 int Factorial(int n)
 {
@@ -30,8 +30,24 @@ int Factorial(int n)
 }
 ```
  
-#### 2. 피보나치 수열
+#### 2. 피보나치 수열(Fibonacci Sequence)
 
+```cpp
+/*
+fib(n) = {0                       .... n = 1
+         {1                       .... n = 2
+         {fib(n-1) + fib(n-2)     .... otherwise
+*/
+int Fibo(int n)
+{
+  if(n==1)
+    return 0;
+  else if(n==2)
+    return 1;
+  else
+    return Fibo(n-1) + Fibo(n-2);
+}
+```
 
 
 
