--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -31,6 +31,7 @@ int Factorial(int n)
 ```
  
 #### 2. 피보나치 수열(Fibonacci Sequence)
+* 첫째 및 둘째 항이 1이며 그 뒤의 모든 항은 바로 앞 두 항의 합인 수열 또는 재귀적인 형태를 띠는 대표적인 수열
 
 ```cpp
 /*
@@ -38,18 +39,18 @@ fib(n) = {0                       .... n = 1
          {1                       .... n = 2
          {fib(n-1) + fib(n-2)     .... otherwise
 */
-int Fibo(int n)
+int Fibo(int n)     //피보나치 수열의 n번째 값 반환(반환한 값을 모두 합산)
 {
-  if(n==1)
+  if(n==1)          //피보나치 수열의 첫 번째 값을 요구하면
     return 0;
-  else if(n==2)
+  else if(n==2)     //피보나치 수열의 두 번째 값을 요구하면
     return 1;
-  else
+  else              //피보나치 수열의 셋 번째 이후의 값을 요구하면
     return Fibo(n-1) + Fibo(n-2);
 }
 ```
 
-
+#### 3. 이진 탐색 알고리즘(BinarySearch Algorithm)
 
 
 
