--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -2,8 +2,10 @@
 데이터를 표현하고 저장하는 방법에 대해서 알려준다.
 
 #### 1-1. 자료구조의 분류
-
-
+* 선형 (자료)구조 : 리스트, 스택, 큐
+* 비선형 (자료)구조 : 트리, 그래프
+* 파일 구조 : 순차파일, 색인파일, 직접파일
+* 단순 구조 : 정수, 실수, 문자, 문자열
 
 ### 2. 알고리즘
 * 표현 및 저장된 데이터를 대상으로 하는 '문제의 해결 방법'을 뜻한다.
@@ -13,10 +15,24 @@
   * 공간 복잡도(Space Complexity) : 메모리 사용량에 대한 분석결과
 * 알고리즘 성능 표현하는 방법 : [접근적 표기법](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%A0%91%EA%B7%BC%EC%A0%81_%ED%91%9C%EA%B8%B0%EB%B2%95.md)
 
+#### 2-1. 순차 탐색 알고리즘(Linear Search Algorithm)
+* 맨 앞에서부터 순서대로 탐색을 진행하는 알고리즘
 
+```cpp
+//ar[] : 찾는 대상의 배열(값의 위치), target : 확인하려는 목표값, len : 배열의 길이 또는 탐색 위치
+int LSearch(int ar[], int len, int target)  
+{
+  for(int i = 0; i<len; i++)
+  {
+    if(ar[i] == target)
+      return i;  //찾았을 때 반환하는 값
+  }
+  return -1;  //찾지 못했을 때 반환하는 값
+}
+```
 
-
-
+#### 2-2. 이진 탐색 알고리즘(Binary Search Algorithm)
+*  배열에 저장된 데이터는 정렬되어 있어야 한다는 조건을 만족해야 한다.
 
 
 
