--- a/자료구조/learn/자료구조와_알고리즘.md
+++ b/자료구조/learn/자료구조와_알고리즘.md
@@ -32,9 +32,35 @@ int LSearch(int ar[], int len, int target)
 ```
 
 #### 2-2. 이진 탐색 알고리즘(Binary Search Algorithm)
-*  배열에 저장된 데이터는 정렬되어 있어야 한다는 조건을 만족해야 한다.
+* 오름차순으로 정렬된 리스트에서 특정한 값의 위치를 찾는 알고리즘
+* 처음 중간의 값을 임의의 값으로 선택하여, 그 값과 찾고자 하는 값의 크고 작음을 비교하는 방식을 채택하고 있다.
+* 배열에 저장된 데이터가 정렬되어 있어야 한다는 단점을 가지고 있다.
 
+```cpp
+//first <= mid <= last
+int BSearch(int ar[], int len, int target) 
+{
+	int first = 0;	////탐색 대상의 시작 인덱스 값
+	int last = len - 1;	//탐색 대상의 마지막 인덱스 값
+	int mid;	//탐색대상의 중앙값
 
+	while (first <= last)  //first가 last보다 작을 때까지 작동(탐색 대상을 줄일 때 mid +-1 을 사용하여 탈출)
+	{
+		mid = (first + last) / 2;	//탐색 대상의 중앙을 확인
+
+		if (target == ar[mid])	//중앙이 타겟이라면 탐색 완료
+			return mid;
+		else	//타겟이 아니라면 탐색 대상을 반으로 줄임
+		{
+			if (target < ar[mid])	//mid보다 target이 작으면 last값을 수정
+				last = mid - 1;
+			else		//mid보다 target이 크면 last값을 수정
+				first = mid + 1;
+		}
+	}
+	return -1;	//찾지 못했을 때 반환되는 값
+}
+```
 
 
 
