--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -51,11 +51,19 @@ int Fibo(int n)     //피보나치 수열의 n번째 값 반환(반환한 값을
 ```
 
 #### 3. 이진 탐색 알고리즘(BinarySearch Algorithm)
+```cpp
+int BSearchRecur(int ar[], int first, int last, int target)
+{
+ int mid;
+ if(first > last) //첫번째 인덱스 값(first)이 마지막 인덱스 값(last)보다 크면 탐색 실패(-1)
+    return -1;
+ mid = (first + last) /2; //탐색 대상의 중앙을 지정
 
-
-
-
-
-
-
-
+ if(ar[mid] == target) //탐색 대상과 중앙값이 일치하면 탐색 종료(mid)
+    return mid;
+ else if(target < ar[mid])
+    return BSearchRecur(ar, first, mid-1, target); //중앙값이 크면 last값 수정
+ else
+    return BSearchRecur(ar, mid+1, last, target); //중앙값이 작으면 first값 수정
+}
+```
