--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -67,3 +67,11 @@ int BSearchRecur(int ar[], int first, int last, int target)
     return BSearchRecur(ar, mid+1, last, target); //중앙값이 작으면 first값 수정
 }
 ```
+
+#### 4. 하노이 타워(The Tower of Hanoi)
+
+
+
+
+
+
