--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -52,6 +52,7 @@ int Fibo(int n)     //피보나치 수열의 n번째 값 반환(반환한 값을
 ```
 
 #### 3. 이진 탐색 알고리즘(BinarySearch Algorithm)
+* [이진 탐색 알고리즘](https://github.com/YouAndMeToo3323/TIL/blob/main/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0/learn/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0%EC%99%80_%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98.md#2-2-%EC%9D%B4%EC%A7%84-%ED%83%90%EC%83%89-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98binary-search-algorithm)
 ```cpp
 int BSearchRecur(int ar[], int first, int last, int target)
 {
