--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -71,7 +71,52 @@ int BSearchRecur(int ar[], int first, int last, int target)
 ```
 
 #### 4. 하노이 타워(The Tower of Hanoi)
+* 하노이의 탑(Tower of Hanoi)은 고대 퍼즐로서 세 개의 기둥과 여러 개의 서로 다른 크기의 원판으로 구성되어 있다.
+* 퍼즐의 목표는 다음 규칙을 준수하면서 모든 원판을 첫 번째 기둥에서 세 번째 기둥으로 이동시키는 것.
+* 조건
+  * 한 번에 하나의 원판만 이동할 수 있다.
+  * 큰 원판이 작은 원판 위에 올 수 없다.
+  * 원판은 항상 세 개의 기둥 중 하나에 있어야 한다.
 
+```cpp
+/*
+막대 A에 꽂혀있는 원반 n개를 막대 C로 옮기는 과정
+1. 작은 원반 n-1개를 (맨 아래의 원반을 제외한 나머지 원반을) A에서 B로 이동
+2. 큰 원반(맨 아래의 원반) 1개를 A에서 C로 이동
+3. 작은 원반(위의 1단계에서 옮겨진 원반) n-1개를 B에서 C로 이동
+------------------------------
+전체 실행 과정
+//hanoi(num,from,by,to)
+hanoi(3, 'A', 'B', 'C')
+Step 1:
+hanoi(2, 'A', 'C', 'B'):
+    Step 1: hanoi(1, 'A', 'B', 'C'):
+        Move disk 1 from A to C
+    Step 2: Move disk 2 from A to B
+    Step 3: hanoi(1, 'C', 'B', 'A'):
+        Move disk 1 from C to B
+Step 2:
+Move disk 3 from A to C
+Step 3:
+hanoi(2, 'B', 'C', 'A'):
+    Step 1: hanoi(1, 'B', 'A', 'C'):
+        Move disk 1 from B to A
+    Step 2: Move disk 2 from B to C
+    Step 3: hanoi(1, 'A', 'B', 'C'):
+        Move disk 1 from A to C
+*/
+void HanoiTowerMove(int num, char from, char by, char to)
+{
+   if(num == 1)
+   {
+      printf("원반 1을 %c에서 %c로 이동\n", from, to);
+      return;
+   }
+   HanoiTowerMove(num-1, from, to, by);
+   printf("원반 %d을(를) %c에서 %c로 이동\n", num, from, to);
+   HanoiTowerMove(num-1, by, from, to);
+}
+```
 
 
 
