--- a/자료구조/learn/재귀.md
+++ b/자료구조/learn/재귀.md
@@ -88,16 +88,16 @@ int BSearchRecur(int ar[], int first, int last, int target)
 전체 실행 과정
 //hanoi(num,from,by,to)
 hanoi(3, 'A', 'B', 'C')
-Step 1:
+Step 1: 작은 원반 n-1개를 (맨 아래의 원반을 제외한 나머지 원반을) A에서 B로 이동
 hanoi(2, 'A', 'C', 'B'):
     Step 1: hanoi(1, 'A', 'B', 'C'):
         Move disk 1 from A to C
     Step 2: Move disk 2 from A to B
     Step 3: hanoi(1, 'C', 'B', 'A'):
         Move disk 1 from C to B
-Step 2:
+Step 2: 큰 원반(맨 아래의 원반) 1개를 A에서 C로 이동
 Move disk 3 from A to C
-Step 3:
+Step 3: 작은 원반(위의 1단계에서 옮겨진 원반) n-1개를 B에서 C로 이동
 hanoi(2, 'B', 'C', 'A'):
     Step 1: hanoi(1, 'B', 'A', 'C'):
         Move disk 1 from B to A
@@ -112,9 +112,9 @@ void HanoiTowerMove(int num, char from, char by, char to)
       printf("원반 1을 %c에서 %c로 이동\n", from, to);
       return;
    }
-   HanoiTowerMove(num-1, from, to, by);
-   printf("원반 %d을(를) %c에서 %c로 이동\n", num, from, to);
-   HanoiTowerMove(num-1, by, from, to);
+   HanoiTowerMove(num-1, from, to, by);  //1단계
+   printf("원반 %d을(를) %c에서 %c로 이동\n", num, from, to);  //2단계
+   HanoiTowerMove(num-1, by, from, to);  //3단계
 }
 ```
 
