--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -1,20 +1,7 @@
-버전 관리
-===
-**1.깃 저장소 만들기**
-
-```bash
-$ git init
-```
-
-* init는 initialize(초기화하다)의 약자로, 해당 디렉터리에서 깃을 사용할 수 있도록 디렉터리를 초기화
-  * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
-  * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
-
-**2. 버전 만들기**
+### 1. 버전
 * 버전 : 문서나 프로그램을를 수정하고 저장할 때마다 생기는 번호 또는 판. 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별
   * 깃에서 버전을 관리하면 각 버전마다 작업했던 내용을 확인 가능하고 그 버전으로 되돌아 갈 수 있음 
 
-![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d23a8b2b-13fd-40ea-88a4-6a2db32945a8)
 
 * 작업트리(working tree) : 파일 수정, 저장 등의 작업을 하는 디렉터리로, '작업 디렉터리(working directory)'라고도 불림
 
@@ -24,20 +11,61 @@ $ git init
 * 저장소(repository) : 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳으로 '리포지토리'와 '저장소'로 불림
   * .git 디렉터리 안에 숨은 파일 형태로 존재하는 영역
 
-#### 1) 버전을 만드는 과정
-* 
+#### 1-1. 버전을 만드는 과정
+1) **Git 초기화**
 
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d23a8b2b-13fd-40ea-88a4-6a2db32945a8)
 
+* init는 initialize(초기화하다)의 약자로, 해당 디렉터리에서 깃을 사용할 수 있도록 디렉터리를 초기화
+  * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
+  * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
 
+```bash
+$ git init
+```
+
+2) **파일 스테이징**
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/412a2bc4-c1e2-43ed-8343-f8a93bf83a89)
-* 버전할 파일 문서를 수정 및 저장 -> 파일 문서를 스테이지에 추가(add)
-  * 
+
+* git add 명령어를 사용하여 특정 파일 또는 수정된 파일을 스테이징 영역에 추가한다.
+  *  .(점) 은 현재 디렉토리와 그 하위 디렉토리에 있는 모든 파일을 말한다.
+
+```bash
+$ git add <file_name>
+$ git add .
+```
+
+3) **파일 커밋**
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d02ca953-ee28-42ae-9c42-63aa8715b0ca)
-* 
- 
 
+* 스테이징 영역에 있는 파일과 변경 사항이 커밋되어 저장소의 기록에 추가한다.
+  * 커밋 메시지는 변경 사항을 설명하는 간단한 메시지를 말한다.
+ 
+```bash
+$ git commit -m "커밋 메시지"
+```
+
+#### 1-2. 원격 저장소를 이용한 버전을 만드는 과정
+1) **원격 저장소 연결**
+* 
+
+
+```bash
+$ git remote add origin <원격 저장소 URL>
+$ git remote add origin https://github.com/username/repository.git
+```
+
+
+
+
+
+
+
+
+
+2) 
 
 
 
