--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -10,6 +10,9 @@
 
 * 저장소(repository) : 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳으로 '리포지토리'와 '저장소'로 불림
   * .git 디렉터리 안에 숨은 파일 형태로 존재하는 영역
+  * git 저장소는 프로젝트의 파일들과 그 파일들의 변경 이력을 저장하는 데이터베이스
+    * 로컬 저장소: 개발자의 로컬 컴퓨터에 있는 저장소
+    * 원격 저장소: GitHub, GitLab, Bitbucket과 같은 원격 서버에 있는 저장소
 
 #### 1-1. 버전을 만드는 과정
 1) **Git 초기화**
@@ -57,15 +60,18 @@ $ git remote add origin <원격 저장소 URL>
 $ git remote add origin https://github.com/username/repository.git
 ```
 
+2) **변경 사항 가져오기**
 
 
+```bash
+$ git pull origin master
+```
 
+3) **변경 사항 푸시**
 
-
-
-
-
-2) 
+```bash
+$ git push origin master
+```
 
 
 
