--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -52,8 +52,6 @@ $ git commit -m "커밋 메시지"
 
 #### 1-2. 원격 저장소를 이용한 버전을 만드는 과정
 1) **원격 저장소 연결**
-* 
-
 
 ```bash
 $ git remote add origin <원격 저장소 URL>
@@ -73,11 +71,18 @@ $ git pull origin master
 $ git push origin master
 ```
 
-#### 1-3. 버전에 대한 상태 확인 및 브랜치 관리
+#### 1-3. 저장소에 대한 상태 확인 및 브랜치 관리
+1) **저장소 상태 확인**
 
+```bash
+$ git status
+```
 
+2) **변경 사항 로그 확인**
 
-
+```bash
+$ git log
+```
 
 
 
