--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -31,6 +31,7 @@ $ git init
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/412a2bc4-c1e2-43ed-8343-f8a93bf83a89)
 
+* 스테이징 영역은 커밋될 변경 사항을 임시로 저장하는 영역
 * git add 명령어를 사용하여 특정 파일 또는 수정된 파일을 스테이징 영역에 추가한다.
   *  .(점) 은 현재 디렉토리와 그 하위 디렉토리에 있는 모든 파일을 말한다.
 
@@ -71,7 +72,7 @@ $ git pull origin master
 $ git push origin master
 ```
 
-#### 1-3. 저장소에 대한 상태 확인 및 브랜치 관리
+#### 1-3. 저장소에 대한 상태 확인
 1) **저장소 상태 확인**
 
 ```bash
@@ -84,7 +85,35 @@ $ git status
 $ git log
 ```
 
+#### 1-4. 브랜치 관리
+* 브랜치는 독립적으로 작업할 수 있는 가지이며 master(또는 main) 브랜치는 기본 브랜치이다.
+* 새로운 기능이나 버그 수정을 위해 별도의 브랜치를 만들 수 있다.
 
+1) 새로운 브랜치 생성 및 변환
+
+```bash
+//생성
+$ git branch <new-branch> 
+$ git checkout <new-branch>
+
+//생성 및 전환
+$ git checkout -b <new-branch>
+```
+
+2) 기존 브랜치 전환
+
+```bash
+$ git checkout <branch-name>
+```
+
+3) 브랜치 병합
+* 다른 브랜치의 변경 사항을 현재 브랜치에 병합
+* merge 는 두 브랜치를 병합하여 하나의 브랜치로 만드는 작업
+* 병합 과정에서 충돌(conflict)이 발생할 수 있으며, 이를 수동으로 해결해야 한다.
+
+```bash
+$ git merge <branch-name>
+```
 
 
 
