--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -89,7 +89,7 @@ $ git log
 * 브랜치는 독립적으로 작업할 수 있는 가지이며 master(또는 main) 브랜치는 기본 브랜치이다.
 * 새로운 기능이나 버그 수정을 위해 별도의 브랜치를 만들 수 있다.
 
-1) 새로운 브랜치 생성 및 변환
+1) **새로운 브랜치 생성 및 변환**
 
 ```bash
 //생성
@@ -100,13 +100,13 @@ $ git checkout <new-branch>
 $ git checkout -b <new-branch>
 ```
 
-2) 기존 브랜치 전환
+2) **기존 브랜치 전환**
 
 ```bash
 $ git checkout <branch-name>
 ```
 
-3) 브랜치 병합
+3) **브랜치 병합**
 * 다른 브랜치의 변경 사항을 현재 브랜치에 병합
 * merge 는 두 브랜치를 병합하여 하나의 브랜치로 만드는 작업
 * 병합 과정에서 충돌(conflict)이 발생할 수 있으며, 이를 수동으로 해결해야 한다.
