--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -15,7 +15,7 @@
     * 원격 저장소: GitHub, GitLab, Bitbucket과 같은 원격 서버에 있는 저장소
 
 #### 1-1. 버전을 만드는 과정
-1) **Git 초기화**
+**1) Git 초기화**
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d23a8b2b-13fd-40ea-88a4-6a2db32945a8)
 
@@ -27,7 +27,7 @@
 $ git init
 ```
 
-2) **파일 스테이징**
+**2) 파일 스테이징**
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/412a2bc4-c1e2-43ed-8343-f8a93bf83a89)
 
@@ -40,7 +40,7 @@ $ git add <file_name>
 $ git add .
 ```
 
-3) **파일 커밋**
+**3) 파일 커밋**
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d02ca953-ee28-42ae-9c42-63aa8715b0ca)
 
@@ -52,44 +52,70 @@ $ git commit -m "커밋 메시지"
 ```
 
 #### 1-2. 원격 저장소를 이용한 버전을 만드는 과정
-1) **원격 저장소 연결**
+**1) 원격 저장소 연결**
 
 ```bash
 $ git remote add origin <원격 저장소 URL>
 $ git remote add origin https://github.com/username/repository.git
 ```
 
-2) **변경 사항 가져오기**
+**2) 변경 사항 가져오기**
 
 
 ```bash
 $ git pull origin master
 ```
 
-3) **변경 사항 푸시**
+**3) 변경 사항 푸시**
 
 ```bash
 $ git push origin master
 ```
 
 #### 1-3. 저장소에 대한 상태 확인
-1) **저장소 상태 확인**
+**1) 저장소 상태 확인**
 
 ```bash
 $ git status
 ```
 
-2) **변경 사항 로그 확인**
+**2) 변경 사항 확인**
+* git log 명령어는 Git 저장소의 커밋 기록을 보여주는데, 다음 정보를 포함한 각 커밋의 상세 내용을 출력한다.
+  * 커밋 해시(Commit Hash) : 각 커밋을 고유하게 식별하는 SHA-1 해시 값(문자열)
+  * 작성자(Author) : 커밋을 작성한 사람의 이름과 이메일 주소
+  * 작성 날짜(Data) : 커밋이 작성된 날짜와 시간
+  * 커밋 메시지(Commit Message) : 커밋에 대한 설명을 제공하는 메시지
 
 ```bash
+//입력
 $ git log
+
+//출력
+commit e1a1b2c3d4e5f67890123456789abcdef12345678
+Author: John Doe <john.doe@example.com>
+Date:   Wed Jun 12 14:00:00 2024 +0000
+
+    Initial commit
 ```
+
+* git log 옵션
+
+|코드|옵션|의미|
+|-|-|-|
+|--oneline|간단한 로그|각 커밋을 한 줄로 요약하여 출력|
+|--graph|그래프 형태|브랜치와 병합 히스토리를 그래프로 시각화하여 출력|
+|-p|패치 포함|각 커밋의 변경 내용을 함께 출력|
+|<file>|특정 파일에 대한 로그|특정 파일의 변경 이력을 출력|
+|-n <number>|숫자로 제한|출력할 커밋의 수를 제한|
+|--since or --until|특정 시간 범위|특정 시간 범위 내(since(부터), until(까지))의 커밋을 출력<br/>(ex :$ git log --since="2024-06-01" --until="2024-06-30")|
+|--author|특정 작성자|특정 작성자의 커밋만 필터링하여 출력<br/>(ex : $ git log --author="John Doe")|
+|--pretty=format|포맷 지정|출력 형식을 사용자 정의할 수 있음|
 
 #### 1-4. 브랜치 관리
 * 브랜치는 독립적으로 작업할 수 있는 가지이며 master(또는 main) 브랜치는 기본 브랜치이다.
 * 새로운 기능이나 버그 수정을 위해 별도의 브랜치를 만들 수 있다.
 
-1) **새로운 브랜치 생성 및 변환**
+**1) 새로운 브랜치 생성 및 변환**
 
 ```bash
 //생성
@@ -100,13 +126,13 @@ $ git checkout <new-branch>
 $ git checkout -b <new-branch>
 ```
 
-2) **기존 브랜치 전환**
+**2) 기존 브랜치 전환**
 
 ```bash
 $ git checkout <branch-name>
 ```
 
-3) **브랜치 병합**
+**3) 브랜치 병합**
 * 다른 브랜치의 변경 사항을 현재 브랜치에 병합
 * merge 는 두 브랜치를 병합하여 하나의 브랜치로 만드는 작업
 * 병합 과정에서 충돌(conflict)이 발생할 수 있으며, 이를 수동으로 해결해야 한다.
@@ -114,6 +140,49 @@ $ git checkout <branch-name>
 ```bash
 $ git merge <branch-name>
 ```
+
+**4) 체리 픽(cherry-pick)**
+* 특정 커밋만을 선택하여 다른 브랜치에 적용한다.
+
+```bash
+$ git cherry-pick <커밋 해시>
+```
+
+**5) 리셋(reset)**
+* 커밋을 취소하거나 되돌릴 때 사용한다.
+
+```bash
+$ git reset --hard <커밋 해시>
+$ git reset --soft <커밋 해시>
+```
+
+**6) 리베이스(Rebase)**
+* 브랜치 기반을 다른 브랜치로 재지정하여 커밋 히스토리를 깔끔하게 만든다.
+
+```bash
+$ git rebase <브랜치 이름>
+```
+
+**7) 리플로그(Reflog)**
+* 로컬 저장소에서 Git 명령어 히스토리를 확인하고 되돌리는 데 사용한다.
+
+```bash
+$ git reflog
+```
+
+**8) 태그(Tag)**
+* 특정 커밋에 태그를 붙여 릴리즈 버전을 관리한다.
+
+```bash
+$ git tag <태그 이름>
+$ git push origin <태그 이름>
+```
+
+
+
+
+
+
 
 
 
