--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -100,8 +100,9 @@ Date:   Wed Jun 12 14:00:00 2024 +0000
 
 * git log 옵션
 
-|코드|옵션|의미|
-|-|-|-|
+|코드|옵션|미||옵션|의미|
+|-|-|-|-|-|
+|%H : 전체 해시
 |--oneline|간단한 로그|각 커밋을 한 줄로 요약하여 출력|
 |--graph|그래프 형태|브랜치와 병합 히스토리를 그래프로 시각화하여 출력|
 |-p|패치 포함|각 커밋의 변경 내용을 함께 출력|
@@ -109,7 +110,17 @@ Date:   Wed Jun 12 14:00:00 2024 +0000
 |-n <number>|숫자로 제한|출력할 커밋의 수를 제한|
 |--since or --until|특정 시간 범위|특정 시간 범위 내(since(부터), until(까지))의 커밋을 출력<br/>(ex :$ git log --since="2024-06-01" --until="2024-06-30")|
 |--author|특정 작성자|특정 작성자의 커밋만 필터링하여 출력<br/>(ex : $ git log --author="John Doe")|
-|--pretty=format|포맷 지정|출력 형식을 사용자 정의할 수 있음|
+|--pretty=format|포맷 지정|출력 형식을 사용자 정의할 수 있음<br/>(ex : $ git log --pretty=format:"%h - %an, %ar : %s")|
+
+* format 옵션에 대한 서식 옵션
+
+|옵션|의미|옵션|의미|옵션|의미|
+|-|-|-|-|-|-|
+|%H|전체 해시|%p|짧은 부모 해시|%cn|커미터 이름|
+|%h|짧은 해시|%an|작성자 이름|%ce|커미터 이메일|
+|%T|트리 해시|%ae|작성자 이메일|%cd|커미터 날짜|
+|%t|짧은 트리 해시|%ad|작성자 날짜<br/>(형식은 --date=옵션에 따름)|%cr|커미터 날짜, 상대적 시간|
+|%P|부모 해시|%ar|작성자 날짜, 상대적 시간|%s|커밋 메시지|
 
 #### 1-4. 브랜치 관리
 * 브랜치는 독립적으로 작업할 수 있는 가지이며 master(또는 main) 브랜치는 기본 브랜치이다.
