--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -100,14 +100,13 @@ Date:   Wed Jun 12 14:00:00 2024 +0000
 
 * git log 옵션
 
-|코드|옵션|미||옵션|의미|
-|-|-|-|-|-|
-|%H : 전체 해시
+|코드|옵션|의미|
+|-|-|-|
 |--oneline|간단한 로그|각 커밋을 한 줄로 요약하여 출력|
 |--graph|그래프 형태|브랜치와 병합 히스토리를 그래프로 시각화하여 출력|
 |-p|패치 포함|각 커밋의 변경 내용을 함께 출력|
-|<file>|특정 파일에 대한 로그|특정 파일의 변경 이력을 출력|
-|-n <number>|숫자로 제한|출력할 커밋의 수를 제한|
+|\<file\>|특정 파일에 대한 로그|특정 파일의 변경 이력을 출력|
+|-n \<number\>|숫자로 제한|출력할 커밋의 수를 제한|
 |--since or --until|특정 시간 범위|특정 시간 범위 내(since(부터), until(까지))의 커밋을 출력<br/>(ex :$ git log --since="2024-06-01" --until="2024-06-30")|
 |--author|특정 작성자|특정 작성자의 커밋만 필터링하여 출력<br/>(ex : $ git log --author="John Doe")|
 |--pretty=format|포맷 지정|출력 형식을 사용자 정의할 수 있음<br/>(ex : $ git log --pretty=format:"%h - %an, %ar : %s")|
