--- a/Git/Git Bash/버전_관리.md
+++ b/Git/Git Bash/버전_관리.md
@@ -111,7 +111,7 @@ Date:   Wed Jun 12 14:00:00 2024 +0000
 |--author|특정 작성자|특정 작성자의 커밋만 필터링하여 출력<br/>(ex : $ git log --author="John Doe")|
 |--pretty=format|포맷 지정|출력 형식을 사용자 정의할 수 있음<br/>(ex : $ git log --pretty=format:"%h - %an, %ar : %s")|
 
-* format 옵션에 대한 서식 옵션
+* format 에 대한 서식 옵션
 
 |옵션|의미|옵션|의미|옵션|의미|
 |-|-|-|-|-|-|
