--- a/자료구조/learn/리스트.md
+++ b/자료구조/learn/리스트.md
@@ -1,7 +1,14 @@
-### 추상 자료형 : Abstract Data Type
+### 1. 추상 자료형 : Abstract Data Type
 * 구현하고자 하는 구조에 대해 실제 구현 내용이 아닌 자료구조의 특성과 어떤 행동을 하는지 설명하는 타입 또는 클래스
 * 구체적인 기능의 완성과정을 언급하지 않고, 순수하게 기능이 무엇인지를 나열 한 것.
 
+### 2. 리스트
+
+#### 2-1. 배열 기반 리스트
+
+
+
+#### 2-2. 연결 리스트
 
 
 
